fixed bug on firefox where slick-slide set to 100% height would prevent flexbox element from spreading to full height

--- a/_sass/blog/_news.scss
+++ b/_sass/blog/_news.scss
@@ -96,9 +96,13 @@ section#news {
 
 
 #news .twitter_frame,
-#news .twitter_el,
 #news .slick-list {
   height: 100%;
+}
+
+#news .twitter_el,
+#news .slick-slide {
+  height: unset;
 }
 
 #news__twitter .twitter_el {
